--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ronnylt/redlock-php",
+    "name": "jrtkcoder/redlock-php",
     "description": "Redis distributed locks in PHP",
     "authors": [
         {
@@ -9,7 +9,7 @@
     ],
     "require": {
         "php": "~5.4",
-        "ext-redis": "~2.2.5"
+        "ext-redis": ">2.2.5"
     },
 
     "autoload": {
